# py-qgis-server

./: .bash_aliases  .buildinfo  .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  CHANGES.md  DEPRECATION_NOTICE.md  MANIFEST.in  Makefile  README.md  README_1_4.md  VERSION  cache.html  config.mk  configuration.html  genindex.html  http-routingtable.html  index.html  intro.html  management.html  mypy.ini  objects.inv  pyproject.toml  qgisapi.html  requirements.pip  requirements.txt  ruff.toml  run_proxy.sh  run_server.sh  run_setup.sh  run_tests.sh  run_worker.sh  schemes.html  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: cache.doctree  configuration.doctree  environment.pickle  index.doctree  intro.doctree  management.doctree  qgisapi.doctree  schemes.doctree
.github/: dependabot.yml
.github/workflows/: publish-doc.yml  release.yml
.lizcloud/: factory.mk
_sources/: cache.rst.txt  configuration.rst.txt  index.rst.txt  intro.rst.txt  management.rst.txt
_static/: documentation_options.js
doc/: Makefile  conf.py  configuration.rst  configuration.rst.j2  index.rst  intro.rst  jtpl.py  qgisapi.rst  requirements.txt  schemes.rst
docker/: .dockerignore  .gitlab-ci.yml  Dockerfile  Dockerfile.local  Dockerfile.pypi  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  factory.manifest  install-lizmap-plugin  install.sh  requirements.txt
docker/python-alpine/: Dockerfile
docker/scripts/: qgis-version.sh
examples/test-lizmap-server-plugin/: docker-compose.yml
html/: .buildinfo  configuration.html  genindex.html  http-routingtable.html  intro.html  objects.inv  search.html  searchindex.js
html/.doctrees/: configuration.doctree  environment.pickle  intro.doctree
html/_sources/: configuration.rst.txt  index.rst.txt  schemes.rst.txt
pyqgisserver/: broadcast.py  cache.py  config.py  config.yml  exceptions.py  filters.py  http.py  logger.py  middleware.py  monitor.py  plugins.py  profiles.py  qgspool.py  qgsworker.py  runtime.py  server.py  stats.py  tests.py  version.py  watchfiles.py
pyqgisserver/filters/: logger.py
pyqgisserver/handlers/: __init__.py  asynchandler.py  basehandler.py  landingpage.py  oapihandler.py  owshandler.py  qgsserverhandler.py  roothandler.py  statushandler.py
pyqgisserver/http/: adapters.py  adaptors.py  qgsrequests.py  runtime.py  server.py
pyqgisserver/http/handlers/: __init__.py  qgsserverhandler.py
pyqgisserver/management/: server.py
pyqgisserver/management/apis/: __init__.py  cache.py  handler.py  plugins.py
pyqgisserver/monitors/: amqp.py  base.py  test.py
pyqgisserver/qgscache/: __init__.py  cachemanager.py  observer.py  types.py
pyqgisserver/qgscache/handlers/: __init__.py  file_handler.py  postgres_handler.py  proto.py
pyqgisserver/qgscache/observers/: ban.py  test.py
pyqgisserver/utils/: decorators.py  filecache.py  lru.py  process.py  pylru.py  qgis.py  qgisapp.py  stats.py  wget.py
pyqgisserver/worker/: config.py  handlers.py  runtime.py  service.py
pyqgisserver/zeromq/: broker.py  client.py  messages.py  pool.py  supervisor.py  utils.py  worker.py
pyqgisserver/zmq/: adapters.py  broker.py  client.py  messages.py  runtime.py  server.py  worker.py
pyqgisserver/zmq/handlers/: __init__.py  owsserver.py
pyqgisservercontrib/core/: componentmanager.py  filters.py  watchfiles.py
requirements/: dev.txt  lint.txt  tests.txt
src/pyqgisserver/: config.py  config.yml  middleware.py  plugins.py  qgspool.py  qgsworker.py  runtime.py  stats.py  tests.py  version.py
src/pyqgisserver/handlers/: asynchandler.py  landingpage.py  owshandler.py
src/pyqgisserver/management/apis/: __init__.py  cache.py  handler.py  plugins.py
src/pyqgisserver/monitors/: amqp.py  base.py  test.py
src/pyqgisserver/qgscache/: __init__.py  cachemanager.py  observer.py
src/pyqgisserver/qgscache/handlers/: __init__.py  file_handler.py  postgres_handler.py  proto.py
src/pyqgisserver/qgscache/observers/: test.py
src/pyqgisserver/utils/: decorators.py  qgis.py  stats.py
src/pyqgisserver/zeromq/: client.py  messages.py  supervisor.py  utils.py
src/pyqgisservercontrib/core/: componentmanager.py
src/pyqgisservercontrib/middlewares/: request_logger.py
tests/: .env  .gitignore  .pg_service.conf  Makefile  check_tag.sh  conftest.py  docker-compose.amqp.yml  docker-compose.postgres.yml  docker-compose.proxy.yml  docker-compose.varnish.yml  docker-compose.yml  preload.list  profiles.yml  requirements.txt  run_proxy.sh  run_server.sh  run_tests.sh  run_worker.sh  setup_env.sh  test_base.py  test_getcapabilities.py  test_getmap.py  test_profile.py  test_regression.py  tests.env  varnish.secret  varnish.vcl
tests/certs/: README.md  localhost.crt  localhost.key
tests/client/: conftest.py  test_base.py  test_getcapabilities.py  test_getmap.py  test_profile.py  test_regression.py
tests/data/: Hot_Spot_Deforestation_Patch_analysis.qgs  bad_layer.qgs  france_parts.qgs  france_parts_qgz.qgz  france_parts_wmsurl.qgs  lines.geojson  points.geojson  preloads.list  project_simple.qgs  project_simple_with_excluded.qgs  project_simple_with_invalid.qgs  project_simple_with_invalid_excluded.qgs  raster_layer.qgs
tests/docker/: Makefile  run_server.sh  run_tests.sh  run_worker.sh  server.conf
tests/plugins/badplugin/: __init__.py  metadata.txt
tests/plugins/foo/: .update-manifest  __init__.py  metadata.txt
tests/plugins/headers/: __init__.py  metadata.txt
tests/profiles/: foobar.yml  rejectips.yml  wmsonly.yml
tests/profiles/wms/: withpath.yml
tests/profiles/wms/subdir/: wfsonly.yml
tests/qgis/: QGIS3.ini
tests/qgis/QGIS/: QGIS3.ini
tests/unittests/: conftest.py  pytest.ini  test.conf  test_a_lru.py  test_api.py  test_badlayers.py  test_base.py  test_cache.py  test_config.py  test_getcapabilities.py  test_getfeatures.py  test_getlegendgraphic.py  test_getmap.py  test_monitor.py  test_profile.py  test_regression.py  test_wfs.py  test_wfs3.py  test_wfs3_deprecated.py
tests/unittests/qgis/: bookmarks.xml
